# Wasm_Obfustion_Tools_Analysis

./: .gitignore  .gitmodules  README.md
WasMixer/: package-lock.json  package.json
Wasmutate/: Run_Wasmmutate_Wasmtime_BasicsAlgorithm.sh  Run_Wasmmutate_Wasmtime_Btree.sh  Run_Wasmmutate_Wasmtime_Btree_Manticore.sh  Run_Wasmmutate_Wasmtime_GillianC.sh  Run_Wasmmutate_Wasmtime_MineRay.sh  Run_Wasmmutate_Wasmtime_Minings_Program.sh  Run_Wasmmutate_Wasmtime_Minos.sh  Run_Wasmmutate_Wasmtime_Real_world.sh  WRun_Wasmmutate_BasicsAlgorithm_wasmer.sh  WRun_Wasmmutate_Btree_Manticore_wasmer.sh  WRun_Wasmmutate_Btree_wasmer.sh  WRun_Wasmmutate_GillianC_wasmer.sh  WRun_Wasmmutate_MineRay_wasmer.sh  package.json  (+11 more)
swamped/: .gitignore  LICENSE  cfg_similarity.py  ghidra_count_functions.py  pyproject.toml  swamped_metrics_binaryen.py
swamped/Results_csv/Results_swamped_Wasmer/: Minos_Malign_cli_spectec.csv  WasmGuard_Malware_cli_spectec.csv  basic_algorithms_cli_spectec.csv  btree_manticore_spectec.csv  btree_spectec.csv  mining_programs_cli_spectec.csv  realworld_program_cli_spectec.csv
swamped/Results_csv/Results_swamped_wasmtime/: Basic_algorithm_spectec.csv  GillianC_cli_spectec.csv  Minos_Malign_cli_spectec.csv  WasmGuard_Malware_cli_spectec.csv  WasmGuard_ben_cli_spectec.csv  basic_algorithms_cli_spectec.csv  btree_manticore_spectec.csv  btree_spectec.csv  mining_programs_cli_spectec.csv  realworld_program_cli_spectec.csv
swamped/cli/: README.md  swamped_cli.py
swamped/strategies/: state.py
swamped/strategies/data/: function_body.pkl
swamped/wasmParser/: parser.py
(+553 files in other folders)
