[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swamped"
version = "0.1.0"
description = "SWAMPED - A framework incorporating 22 semantics-preserving perturbation methods for WebAssembly modules"
readme = "cli/README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
]

[project.scripts]
swamped = "cli.swamped_cli:main"

[tool.setuptools.packages.find]
include = ["cli*", "wasmParser*", "strategies*"]

[tool.setuptools.package-data]
strategies = ["data/*"]
